--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,7 @@
     "@monaco-editor/react": "^4.7.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
+    "@tailwindcss/postcss": "^4.0.0-alpha.13",
     "@tiptap/extension-code-block-lowlight": "^3.0.0-beta.6",
     "@tiptap/extension-heading": "^3.0.0-beta.6",
     "@tiptap/extension-image": "^3.0.0-beta.6",
@@ -37,6 +38,7 @@
     "marked": "^15.0.12",
     "next": "15.4.4",
     "node-fetch": "^3.3.2",
+    "npm": "^11.5.2",
     "openai": "^5.3.0",
     "react": "^19.1.0",
     "react-countdown": "^2.3.6",
