--- a/my-project/package.json
+++ b/my-project/package.json
@@ -15,6 +15,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/postcss": "^4.0.0-alpha.13",
+    "@tiptap/extension-code": "^3.2.0",
     "@tiptap/extension-code-block-lowlight": "^3.0.0-beta.6",
     "@tiptap/extension-heading": "^3.0.0-beta.6",
     "@tiptap/extension-image": "^3.0.0-beta.6",
